# JaegerDiscovery

./: .dockerignore  .drone.yml  .gitignore  .vc.yaml  Cargo.toml  Dockerfile  Makefile  catalog-info.yaml  devspace.yaml
docs/: readme.md
src/: discovery.rs  error.rs  main.rs  query.rs  state.rs
